# fincheck.dev

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: layout.tsx  page.tsx
app/(auth)/sign-in/: page.tsx
app/(auth)/sign-up/: page.tsx
app/api/metrics/: route.ts
app/api/signup/: route.ts
app/components/: AuthCard.tsx  DetailsForm.tsx  FileUpload.tsx  HeaderSignOut.tsx  IntroCard.tsx
app/components/charts/: CPURAMUSAGE.tsx  ChartWrapper.tsx  ColdWarmBarChart.tsx  ColdWarmUsage.tsx  CpuChart.tsx  (+19 more)
app/dashboard/: page.tsx
app/intro/: page.tsx
app/lib/: useRealtime.tsx
app/main/: page.tsx
app/sign-in/: page.tsx
app/sign-up/: page.tsx
auth_service/: Cargo.toml
auth_service/src/: main.rs
auth_service/src/entity/: users.rs
auth_service/src/routes/: signup.rs
auth_service/src/services/: password.rs
backend/: main.py  requirements.txt  test_prediction_quality.py
backend/benchmarking/: ably_publisher.py  calc_flops.py  get_memory_footprint.py  inference_metrics.py  metrics_manager.py  prediction_quality.py  store_metrics.py  system_metrics.py
backend/models/: base_model.py  baseline_mnist.pth  kd_cpu.py  kd_mnist.pth  low_rank.py  lrf_mnist.pth  mnist_data.py  mnist_model.py  pruned_mnist.pth  pruning.py  quant.py  quantized_mnist.pth  test_baseline_inference.py  train_baseline_mnist.py  ws.py  ws_mnist.pth
backend/msgqueue/: worker1.py
docs/: TODO1.md  architecture.md  week-2-todo.md
lib/: ably.ts  mongodb.ts
prisma/: schema.prisma
types/: metrics.ts  next-auth.d.ts
(+12 files in other folders)
